# supercomp

./: exemplo1.cpp
01-Intro/: entrada  tarefa1  tarefa1.cpp  tarefa2  tarefa2.cpp  tarefa3.py  tarefa4  tarefa4.cpp
01-Intro/pj_pt0/: projeto0  projeto0.cpp
02-STL/: tarefa1  tarefa1.cpp  tarefa2  tarefa2.cpp  tarefa3  tarefa3.cpp
02-STL/pj_pt1/: exemplo-lambda  projeto0  projeto0.cpp
02-STL/projeto0/: exemplos-lambda.cpp  projeto0  projeto0.cpp
03-CMAKE/: CMakeLists.txt  func.cpp  func.h  pj_pt3.cpp  projeto0.cpp
04-autovec/: tarefa2  tarefa2.cpp  tarefa2_fast
05-multi-core/: exemplo1-threads  pi  pi-numeric-integration-par.cpp  pi-par  tarefa2  tarefa2.cpp  tarefa3  tarefa3.cpp
06-OpenMP/: pi_compared
07-openmp-for/: mandel  pi_compared
08-efeitos-colaterais/: pi_mc  pi_mc.c  pi_mc_par1.c  pi_mc_par2  pi_mc_par2.c  pi_mc_random  pi_mc_random.c
09-tarefas/: fib  fib.cpp  pi  pi_recursivo.cpp  tarefa1  tarefa1.cpp
boost/: exemplo-accumulator  exemplo-any  exemplo-distribuicao_normal  exemplo-matrizes  exemplo-random  exemplo-salvando_aleatorios  exemplo-scoped_ptr  exemplo-shared_ptr  tarefa1  tarefa1.cpp  tarefa2  tarefa2.cpp  tarefa3.cpp
boost/threads/: a.out  atividade1.cpp
boost/threads/solucoes/: a.out  solucao_atividade1.cpp
gpu/: blurGPU.cu
sharedMemory/: a.out  fibonacci.cpp  hello_omp  hello_omp_p  mandel  mandel.cpp  pi  pi.cpp  pi_recur.cpp  prod_cons.cpp
sharedMemory/pi_monte_carlo/: a.out  pi_mc.cpp  random.cpp  random.h
sharedMemory/solucoes/: pi  pi_atomic
simd/: avx  div82.cpp  funcs.cpp
